--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 *.user
 *.userosscache
 *.sln.docstates
+ContractionHierarchies/Data/netherlands.csv
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
