--- a/ContractionHierarchies/ContractionHierarchies.csproj
+++ b/ContractionHierarchies/ContractionHierarchies.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="30.0.1" />
+    <PackageReference Include="OsmSharp" Version="6.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\High-Speed-Priority-Queue-for-C-Sharp\Priority Queue\Priority Queue.csproj" />
   </ItemGroup>
 
